# apertium-quality

./: Makefile.am  README  README.txt  autogen.sh  configure.ac  corpus_generator.py  setup.py
apertium/: __init__.py
apertium/quality/: __init__.py  corpora.py  html.py  testing.py
apertium/quality/frontend/: __init__.py  ambiguity_tester.py  auto_tester.py  auto_testing.py  corpus_extractor.py  coverage_tester.py  dictionary_tester.py  generation_tester.py  hfst_tester.py  morph_tester.py  regression_tester.py  vocabulary_tester.py  website_generator.py
apertium_quality/: __init__.py  core.py  corpora.py  corpus_extractor.py  coverage_testing.py  regression_testing.py  testing.py
apertium_quality/frontend/: ambiguity_tester.py  coverage_tester.py  hfst_tester.py  regression_tester.py  website_generator.py
dev/: bottle.py  webapp.py
doc/: debhack.sh  example.xml  statistics.rnc  statistics.rng
